--- a/tox.ini
+++ b/tox.ini
@@ -13,3 +13,13 @@ commands =
 deps =
     pytest
 description = Run unit tests.
+
+[testenv:lint]
+deps =
+    black
+    isort
+skip_install = true
+commands =
+    black src/ tests/
+    isort src/ tests/
+description = Run linters.
